--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CodeOrbit Club</title>
-  <link rel="shortcut icon" href="HAckerina.png" />
+  <link rel="shortcut icon" href="HAckerina (3).png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -692,7 +692,7 @@
 
 <body>
   <header id="header">
-    <img src="HAckerina.png" alt="CodeOrbit Logo" />
+    <img src="HAckerina (3).png" alt="CodeOrbit Logo" />
     <nav>
       <a href="#events">Events</a>
       <a href="#activities">Activities</a>
@@ -894,3 +894,4 @@
   </script>
 </body>
 </html>
+
