--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Hitesh Bharwad</h3>
         <p>Support</p>
-        <a href="#">Portfolio</a>
+        <a href="https://hitesh526.github.io/Portfolio/">Portfolio</a>
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
@@ -1742,4 +1742,5 @@
   </script>
 </body>
 </html>
+
 
