--- a/index.html
+++ b/index.html
@@ -1492,7 +1492,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Chirayu Patil</h3>
         <p>Support</p>
-        <a href="#">Portfolio</a>
+        <a href="https://chirayu11918.github.io/project/">Portfolio</a>
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
@@ -1502,7 +1502,7 @@
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-        <h3>Subham Sukla</h3>
+        <h3>Shubham Shukla</h3>
         <p>Support</p>
         <a href="#">Portfolio</a>
       </div>
@@ -1742,5 +1742,6 @@
   </script>
 </body>
 </html>
+
 
 
