--- a/index.html
+++ b/index.html
@@ -1467,7 +1467,7 @@
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Meet Shah</h3>
-        <p>Co-Head (Boys)</p>
+        <p>Founder</p>
         <a href="https://meetshah274.github.io/Portfolio/" target="_blank">Portfolio</a>
       </div>
       <div class="team-card reveal">
@@ -1742,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
