--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Namita Shastri</h3>
-        <p>Co-Head (Girls)</p>
+        <p>Head</p>
         <a href="https://namitashastri.github.io/Portfolio/" target="_blank">Portfolio</a>
       </div>
       <div class="team-card reveal">
@@ -1742,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
