--- a/index.html
+++ b/index.html
@@ -1419,7 +1419,7 @@
       <div class="card reveal">
         <img src="tech.jpg" alt="Tech Talks">
         <h3>Tech Talks</h3>
-        <p>Fun & informative discussions with brilliant speakers from the tech industry.</p>
+        <p>A knowledge-driven session where seniors decode complex tech topics with real-world experience and practical clarity.</p>
       </div>
     </div>
   </section>
@@ -1742,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
