--- a/index.html
+++ b/index.html
@@ -1462,7 +1462,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Janak Parmar</h3>
         <p>Main Leader</p>
-        <a href="https://janak0756.github.io/project/">Portfolio</a>
+        <a href="https://janak0756.github.io/Codeorbit/">Portfolio</a>
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
@@ -1742,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
