--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Garvi Shah</h3>
         <p>Support</p>
-        <a href="#">Portfolio</a>
+        <a href="Document from Meet">Portfolio</a>
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
@@ -1742,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
