--- a/index.html
+++ b/index.html
@@ -1480,8 +1480,7 @@
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
         <h3>Garvi Shah</h3>
         <p>Support</p>
-        <a href="https://drive.google.com/file/d/19qIGXDcVzfxGlb9rPV9R6F-n_txorhgj/view
-          ">Portfolio</a>
+        <a href="p1.html">Portfolio</a>
       </div>
       <div class="team-card reveal">
         <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
@@ -1743,6 +1742,7 @@
   </script>
 </body>
 </html>
+
 
 
 
